--- a/work6/style.css
+++ b/work6/style.css
@@ -20,9 +20,9 @@
     background-color: black;
 }
 
-.box {
+.box1 {
     width: 392px;
-    height: 80px;
+    height: 100px;
     float: left;
     background-color: aqua;
     padding: 5px;
@@ -30,6 +30,37 @@
     text-align: center;
 }
 
-.box li {
+.box2 {
+    width: 392px;
+    height: 100px;
+    float: left;
+    background-color: rgba(0, 255, 255, 0.616);
+    padding: 5px;
+    margin-left: 2px;
+    text-align: center;
+}
+
+.box3 {
+    width: 392px;
+    height: 100px;
+    float: left;
+    background-color: rgb(0, 225, 255);
+    padding: 5px;
+    margin-left: 2px;
+    text-align: center;
+}
+
+.box1 li,
+.box2 li,
+.box3 li {
     list-style: none;
+}
+
+.footer {
+    margin: 20px;
+    text-align: center;
+}
+
+.clear {
+    clear: both;
 }
